[kbss-cvut/termit-ui#449] Use semicolon when splitting multiple values in imported Excel cell.
Semicolon is used in export as well.