@@ -6,6 +6,7 @@ import cz.cvut.kbss.jopa.vocabulary.DC;
 import cz.cvut.kbss.jopa.vocabulary.SKOS;
 import cz.cvut.kbss.jsonld.JsonLd;
 import cz.cvut.kbss.termit.model.Term;
+import cz.cvut.kbss.termit.service.export.util.TabularTermExportUtils;
 import org.apache.poi.ss.usermodel.Cell;
 import org.apache.poi.ss.usermodel.Row;
 import org.apache.poi.ss.usermodel.Sheet;
@@ -155,7 +156,7 @@ class LocalizedSheetImporter {
         getAttributeValue(termRow, SKOS.BROADER).ifPresent(br -> setParentTerms(term, splitIntoMultipleValues(br)));
         getAttributeValue(termRow, SKOS.NOTATION).ifPresent(nt -> term.setNotations(splitIntoMultipleValues(nt)));
         getAttributeValue(termRow, DC.Terms.REFERENCES).ifPresent(
-                nt -> term.setProperties(Map.of(DC.Terms.REFERENCES, splitIntoMultipleValues(nt))));
+                nt -> term.setProperties(Collections.singletonMap(DC.Terms.REFERENCES, splitIntoMultipleValues(nt))));
         getAttributeValue(termRow, SKOS.RELATED).ifPresent(
                 rt -> mapSkosRelationship(term, splitIntoMultipleValues(rt), SKOS.RELATED));
     }
@@ -186,11 +187,12 @@ class LocalizedSheetImporter {
         }
     }
 
-    private void setParentTerms(Term term, Set<String> parentLabels) {
-        parentLabels.forEach(label -> {
-            final Term parent = labelToTerm.get(label);
+    private void setParentTerms(Term term, Set<String> parents) {
+        parents.forEach(parentIdentification -> {
+            final Term parent = getTerm(parentIdentification);
             if (parent == null) {
-                LOG.warn("No parent term with label '{}' for term '{}'.", label, term.getLabel().get(langTag));
+                LOG.warn("No parent term with label or identifier '{}' found for term '{}'.", parentIdentification,
+                         term.getLabel().get(langTag));
             } else {
                 term.addParentTerm(parent);
             }
@@ -265,6 +267,7 @@ class LocalizedSheetImporter {
     }
 
     private static Set<String> splitIntoMultipleValues(String value) {
-        return Stream.of(value.split(",")).map(String::trim).collect(Collectors.toSet());
+        return Stream.of(value.split(TabularTermExportUtils.STRING_DELIMITER)).map(String::trim)
+                     .collect(Collectors.toSet());
     }
 }
